--- a/.screenrc
+++ b/.screenrc
@@ -1,9 +1,3 @@
-# Allow bold colors - necessary for some reason
-attrcolor b ".I"
-
-# Tell screen how to set colors. AB = background, AF=foreground
-termcapinfo xterm 'Co#256:AB=\E[48;5;%dm:AF=\E[38;5;%dm'
-
 # Enables use of shift-PgUp and shift-PgDn
 termcapinfo xterm|xterms|xs|rxvt ti@:te@
 
@@ -19,7 +13,7 @@ defscrollback 30000
 hardstatus alwayslastline 
 
 # Very nice tabbed colored hardstatus line
-hardstatus string "%{= kw} %= %-Lw *%{= kW}%n$ %t*%{= kw} %+Lw %="
+hardstatus string "%{= dw} %= %-Lw *%{= dW}%n$ %t%{-}* %+Lw %="
 
 # vim delete after close
 altscreen on
