--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,9 @@
-# This is a comment!
+
+set -g default-terminal "xterm-256color"
+
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+
+set -g mouse on
 
 # Esc delay
 set -sg escape-time 0
@@ -9,7 +14,7 @@ unbind C-b
 bind C-a send-prefix
 
 # Change status color
-# set -g status-style bg=darkgreen
+set -g status-style fg=white,bg=black
 
 # vim!
 set-window-option -g mode-keys vi
@@ -20,7 +25,10 @@ bind l select-pane -R
 
 set -g base-index 1
 
-set -as terminal-features ",alacritty*:RGB"
-# set -as terminal-overrides ",alacritty*:Tc"
+set -g status-left ''
+set -g status-right ''
+set -g status-justify centre
 
-set -g default-terminal "tmux-256color"
+set -g window-status-format '#[fg=#888888]#I #W'
+set -g window-status-current-format '#[bold]#[fg=#6ba340]#I #[fg=#ffffff]#W'
+
